# AgentScribe

./: .needle-predispatch-sha  .needle.yaml  CHANGELOG.md  Cargo.toml  README.md  install.sh
.beads/: config.yaml  issues.jsonl
.beads/.br_recovery/: beads.db.20260322_151548_794045561.bak
.beads/traces/agentscribe-2dp/: metadata.json  stdout.txt
.beads/traces/agentscribe-2dp.1/: metadata.json  stdout.txt
.beads/traces/agentscribe-egl/: metadata.json  stdout.txt
.beads/traces/agentscribe-p7x/: metadata.json  stdout.txt
.beads/traces/agentscribe-p7x.1/: metadata.json  stdout.txt
.beads/traces/agentscribe-p7x.2/: metadata.json  stdout.txt
.beads/traces/agentscribe-zef/: metadata.json
.beads/traces/agentscribe-zef.2/: metadata.json  stdout.txt
.github/workflows/: ci.yml
assets/: hljs-subset.min.js
data/: tech_keywords.txt
docs/: cli-reference.md  configuration.md  new-features-01.md  plan.md  workflows.md
examples/: README.md  continue-dev.toml  copilot-chat.toml  plugin_template.toml  sqlite-agent.toml
notes/: bf-1f9g.md
plugins/: BUILDING_PLUGINS.md  aider.toml  claude-code.toml  codex.toml  cursor.toml  opencode.toml  windsurf.toml
src/: analytics.rs  capacity.rs  cli.rs  config.rs  daemon.rs  digest.rs  error.rs  event.rs  file_knowledge.rs  gc.rs  index.rs  lib.rs  main.rs  mcp.rs  plugin.rs  projects.rs  pulse_report.rs  recurring.rs  redaction.rs  render.rs  rules.rs  search.rs  shell_hook.rs  tags.rs  transcription.rs  write_guard.rs
src/enrichment/: antipatterns.rs  code_artifacts.rs  errors.rs  git.rs  mod.rs  outcome.rs  solution.rs  summary.rs
src/parser/: json_tree.rs  jsonl.rs  markdown.rs  mod.rs  sqlite.rs
src/scraper/: file_path_extractor.rs  mod.rs  state.rs
tests/: context_tests.rs  daemon_mcp.rs  integration_tests.rs  phase6_tests.rs  pulse_report_tests.rs  render_tests.rs  transcription_tests.rs  zero_write_tests.rs
tests/fixtures/aider/: session-multi.md  session.md
tests/fixtures/claude-code/: session-abandoned.jsonl  session-auth-feature.jsonl  session-failure.jsonl  session-postgres-debug.jsonl  session-with-tools.jsonl
tests/fixtures/codex/: rollout-docker-build-fix.jsonl  rollout-success.jsonl
tests/fixtures/edge_cases/: session-truncated.jsonl  session-unicode.jsonl
tests/fixtures/opencode/message/session1/: msg1.json  msg2.json
tests/fixtures/opencode/message/session2/: msg3.json  msg4.json  msg5.json
tests/fixtures/opencode/part/msg1/: part1.json
tests/fixtures/opencode/part/msg2/: part2.json
tests/fixtures/opencode/part/msg3/: part3.json
tests/fixtures/opencode/part/msg4/: part4.json
tests/fixtures/opencode/part/msg5/: part5.json
tests/fixtures/opencode/session/proj1/: session1.json  session2.json
