[package]
name = "agentscribe"
version = "0.1.0"
edition = "2021"
description = "Archive, search, and learn from coding agent conversations"
license = "MIT"
repository = "https://github.com/coding/AgentScribe"
authors = ["coding"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# TOML parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# JSON parsing
serde_json = "1.0"
jsonpath_lib = "0.3"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# File system
walkdir = "2.5"
glob = "0.3"
notify = "7.0"

# Additional for JSON tree parsing
regex = "1.11"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["parsing"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Path handling
directories = "5.0"
shellexpand = "3.1"
path-absolutize = "3.1"

# File locking
fs2 = "0.4"

# Colors in terminal
console = "0.15"
termcolor = "1.4"

# Tables for CLI output
tabled = "0.17"

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"

[[bin]]
name = "agentscribe"
path = "src/main.rs"
